@@ -1,6 +1,7 @@
 package tech.gomes.reading.management.builder;
 
-
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import org.springframework.data.domain.Page;
 import tech.gomes.reading.management.domain.Book;
 import tech.gomes.reading.management.dto.book.response.BookResponseDTO;
@@ -9,8 +10,8 @@ import tech.gomes.reading.management.utils.ConvertUtils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class BookResponseDTOBuilder {
 
     public static BookResponseDTO from(Book book) {
@@ -25,13 +26,13 @@ public class BookResponseDTOBuilder {
                 .status(book.getStatus().getValue())
                 .totalPages(book.getBookTemplate().getPages())
                 .startedDate(book.getStartedAt() == null ? null : book.getStartedAt())
-                .finishedDate(book.getFinishedAt() == null ? null :book.getFinishedAt())
+                .finishedDate(book.getFinishedAt() == null ? null : book.getFinishedAt())
                 .build();
     }
 
     public static BookResponsePageDTO from(Page<Book> bookPage) {
         List<BookResponseDTO> responseDTOList = bookPage.getContent().isEmpty() ?
-                Collections.emptyList() : bookPage.getContent().stream().map(BookResponseDTOBuilder::from).collect(Collectors.toList());
+                Collections.emptyList() : bookPage.getContent().stream().map(BookResponseDTOBuilder::from).toList();
 
         return BookResponsePageDTO.builder()
                 .page(bookPage.getNumber())
